@@ -1,6 +1,16 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-10-28
+  Added a setting to Configure School settings, to hide advising checkmarks if the student has enrolled
+  in the course they were advised for (also works for completed as well).
+
+  Added a new permission (in Admin module section) for user to be able to Delete courses, groups, or degrees.
+  Also added those checks to the deletion functions for those forms.
+  
+  Fixed a bug in the course_search module, which was negating any effort to NOT have course names automatically
+  capitalized.
+  
 
 2016-10-24
   Added new hook: hook_flightpath_can_assign_course_to_group().  It lets custom modules decide whether or not
